--- a/package.json
+++ b/package.json
@@ -32,16 +32,22 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "formik": "^2.2.9",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "jest-config": "^27.5.1",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.1",
+    "react-query": "^3.34.15",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
     "serve": "^12.0.1",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "cross-env PORT=8080 react-app-rewired start",
@@ -49,7 +55,8 @@
     "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "serve": "serve build -s -l 8080",
-    "lint": "concurrently 'tsc --noEmit' 'eslint --cache --ext=ts,tsx src --fix'"
+    "lint": "concurrently 'tsc --noEmit' 'eslint --cache --ext=ts,tsx src --fix'",
+    "graphql:codegen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -65,5 +72,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "2.6.1",
+    "@graphql-codegen/introspection": "2.1.1",
+    "@graphql-codegen/typescript": "2.4.3",
+    "@graphql-codegen/typescript-operations": "2.3.0",
+    "@graphql-codegen/typescript-react-query": "^3.5.2",
+    "@types/react-query": "^1.2.9"
   }
 }
